booking requuest added

--- a/online_Hall_Booking/Views/Product/Details.cshtml
+++ b/online_Hall_Booking/Views/Product/Details.cshtml
@@ -67,7 +67,7 @@
                         <p class="vote"><strong>Day :</strong> @Model.day | <strong> Time</strong>(@Model.SlotTime)</p>
 
                         <div class="action">
-                            <button class="add-to-cart btn btn-default" type="button">Request Booking</button>
+                            <a asp-action="Create"  class="add-to-cart btn btn-default" >Request Booking</a>
                           
                         </div>
                     </div>
