--- a/online_Hall_Booking/Views/Shared/AdminLTE/_MainNavigation.cshtml
+++ b/online_Hall_Booking/Views/Shared/AdminLTE/_MainNavigation.cshtml
@@ -91,6 +91,15 @@
                                 </a>
                             </li>
 
+                            <li class="nav-item ">
+                                <a asp-controller="Product" asp-action="Requests" class="nav-link">
+                                    <i class="nav-icon fas fa-clock"></i>
+                                    <p>
+                                        Booking Request
+                                    </p>
+                                </a>
+                            </li>
+
                         }
                     </ul>
                 </nav>
