--- a/online_Hall_Booking/Views/Product/Create.cshtml
+++ b/online_Hall_Booking/Views/Product/Create.cshtml
@@ -9,7 +9,7 @@
 
 <h4>HallAppointment</h4>
 <hr />
-<div class="row">
+<div class="form-row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -33,11 +33,7 @@
                 <input asp-for="Remarks" class="form-control" />
                 <span asp-validation-for="Remarks" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" />
-                <span asp-validation-for="Date" class="text-danger"></span>
-            </div>
+            
             
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
