--- a/online_Hall_Booking/Views/Product/Delete.cshtml
+++ b/online_Hall_Booking/Views/Product/Delete.cshtml
@@ -1,11 +1,12 @@
 ﻿@model online_Hall_Booking.Models.HallAppointment
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
 }
 
-<h1>Details</h1>
+<h1>Delete</h1>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>HallAppointment</h4>
     <hr />
@@ -35,20 +36,34 @@
             @Html.DisplayFor(model => model.Remarks)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.AdminRemarks)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.AdminRemarks)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Date)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Date)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Status)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Status)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Hall)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Hall.Address)
-        </dd>
+        </dd class>
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.HapId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    
+    <form asp-action="Delete">
+        <input type="hidden" asp-for="HapId" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="Requests">Back to List</a>
+    </form>
 </div>
