--- a/online_Hall_Booking/Views/Product/Edit.cshtml
+++ b/online_Hall_Booking/Views/Product/Edit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Edit";
+    Layout = "~/Views/Shared/CustomerLTE/_Layout_Customer.cshtml";
 }
 
 <h1>Edit</h1>
@@ -15,34 +16,40 @@
             <input type="hidden" asp-for="HapId" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
+                <input readonly asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="phone" class="control-label"></label>
-                <input asp-for="phone" class="form-control" />
+                <input readonly asp-for="phone" class="form-control" />
                 <span asp-validation-for="phone" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
+                <input readonly asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Remarks" class="control-label"></label>
-                <input asp-for="Remarks" class="form-control" />
+                <input readonly asp-for="Remarks" class="form-control" />
                 <span asp-validation-for="Remarks" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="AdminRemarks" class="control-label"></label>
+                <input asp-for="AdminRemarks" class="form-control" />
+                <span asp-validation-for="AdminRemarks" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" />
+                <input readonly asp-for="Date" class="form-control" />
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="HId" class="control-label"></label>
-                <select asp-for="HId" class="form-control" asp-items="ViewBag.HId"></select>
-                <span asp-validation-for="HId" class="text-danger"></span>
+                <label asp-for="Status" class="control-label"></label>
+                <input asp-for="Status" class="form-control" />
+                <span asp-validation-for="Status" class="text-danger"></span>
             </div>
+            
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
