--- a/online_Hall_Booking/Views/Product/Requests.cshtml
+++ b/online_Hall_Booking/Views/Product/Requests.cshtml
@@ -10,54 +10,82 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                @Html.DisplayNameFor(model => model.Date)
+
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.phone)
+                @Html.DisplayNameFor(model => model.Hall)
+
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Email)
+
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Remarks)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Date)
+                @Html.DisplayNameFor(model => model.AdminRemarks)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Hall)
+                @Html.DisplayNameFor(model => model.Status)
             </th>
-            <th></th>
+           
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.phone)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Remarks)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Date)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Hall.Name)
-                </td>
-                @*<td>
-                    <a asp-action="Edit" asp-route-id="@item.HapId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.HapId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.HapId">Delete</a>
-                </td>*@
-            </tr>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Date)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Hall.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+                <br />
+                @Html.DisplayFor(modelItem => item.phone)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Remarks)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.AdminRemarks)
+            </td>
+            <td>
+                @if (item.Status >= 1)
+                {
+                    <h6>Complete</h6>
+                }
+
+                else if (item.Status < 0)
+                {
+                    <h6>Decline</h6>
+                }
+
+                else 
+                {
+                    <h6>Pending</h6>
+                }
+
+
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.HapId" class="btn btn-primary">Response</a>
+                <a asp-action="Delete" asp-route-id="@item.HapId" class="btn btn-danger">Remove</a>
+
+
+            </td>
+        </tr>
         }
     </tbody>
 </table>
