--- a/online_Hall_Booking/Views/Product/Edit.cshtml
+++ b/online_Hall_Booking/Views/Product/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Edit";
-    Layout = "~/Views/Shared/CustomerLTE/_Layout_Customer.cshtml";
+    Layout = "~/Views/Shared/AdminLTE/_Layout.cshtml";
 }
 
 <h1>Edit</h1>
@@ -45,8 +45,16 @@
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Status" class="control-label"></label>
-                <input asp-for="Status" class="form-control" />
+                <label for="cars">Status</label>
+
+                <select name="status" class="form-control">
+                    <option value="1">Complete</option>
+                    <option value="0">Pending</option>
+                    <option value="-1">Decline</option>
+                    
+                </select>
+
+
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             
@@ -58,6 +66,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Requests">Back to List</a>
 </div>
 
