--- a/online_Hall_Booking/Views/Product/Requests.cshtml
+++ b/online_Hall_Booking/Views/Product/Requests.cshtml
@@ -18,6 +18,10 @@
 
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Package)
+
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Name)
 
             </th>
@@ -34,7 +38,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Status)
             </th>
-           
+            <th>
+                <a asp-action="Index" asp-controller="Order" class="btn btn-outline-success"><i class="far fa-plus-square"></i> Orders List</a>
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -46,6 +52,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Hall.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Package.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
@@ -72,7 +81,7 @@
                     <h6>Decline</h6>
                 }
 
-                else 
+                else
                 {
                     <h6>Pending</h6>
                 }
