--- a/online_Hall_Booking/Views/Shared/AdminLTE/_Layout.cshtml
+++ b/online_Hall_Booking/Views/Shared/AdminLTE/_Layout.cshtml
@@ -6,6 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
 
     <script src="https://kit.fontawesome.com/792afe9606.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 
     <title>AdminLTE 3 | Starter</title>
     <partial name="AdminLTE/_Styles" />
