--- a/online_Hall_Booking/Views/Product/Index.cshtml
+++ b/online_Hall_Booking/Views/Product/Index.cshtml
@@ -11,7 +11,7 @@
     @foreach (var item in Model)
     {
     <div class="col-3">
-        <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
+        <div class="card h-100 text-white bg-dark mb-3" style="max-width: 18rem;">
             <img class="card-img-top   " src="~/hall/cover/@item.CoverImageUrl" style="height:300px" alt="Card image cap">
 
             <div class="card-body">
