--- a/online_Hall_Booking/Views/Shared/AdminLTE/_MainNavigation.cshtml
+++ b/online_Hall_Booking/Views/Shared/AdminLTE/_MainNavigation.cshtml
@@ -99,6 +99,23 @@
                                     </p>
                                 </a>
                             </li>
+                            <li class="nav-item ">
+                                <a asp-controller="Order" asp-action="Index" class="nav-link">
+                                    <i class="nav-icon fas fa-clock"></i>
+                                    <p>
+                                        Orders
+                                    </p>
+                                </a>
+                            </li>
+
+                            <li class="nav-item ">
+                                <a asp-controller="Transaction" asp-action="Index" class="nav-link">
+                                    <i class="nav-icon fas fa-clock"></i>
+                                    <p>
+                                        Transactins
+                                    </p>
+                                </a>
+                            </li>
 
                         }
                     </ul>
