front end changes

--- a/online_Hall_Booking/Views/Product/Edit.cshtml
+++ b/online_Hall_Booking/Views/Product/Edit.cshtml
@@ -5,10 +5,9 @@
     Layout = "~/Views/Shared/AdminLTE/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
-
-<h4>HallAppointment</h4>
-<hr />
+<div class="text-center">
+    <h4 class="display-4">Appointments</h4>
+</div>
 <script>
     $(function () {
 
