--- a/online_Hall_Booking/Views/Shared/AdminLTE/_MainNavigation.cshtml
+++ b/online_Hall_Booking/Views/Shared/AdminLTE/_MainNavigation.cshtml
@@ -93,7 +93,7 @@
 
                             <li class="nav-item ">
                                 <a asp-controller="Product" asp-action="Requests" class="nav-link">
-                                    <i class="nav-icon fas fa-clock"></i>
+                                    <i class="nav-icon fas fa-shopping-cart"></i>
                                     <p>
                                         Booking Request
                                     </p>
@@ -101,7 +101,7 @@
                             </li>
                             <li class="nav-item ">
                                 <a asp-controller="Order" asp-action="Index" class="nav-link">
-                                    <i class="nav-icon fas fa-clock"></i>
+                                    <i class="nav-icon fas fa-arrow-alt-circle-down"></i>
                                     <p>
                                         Orders
                                     </p>
@@ -110,7 +110,7 @@
 
                             <li class="nav-item ">
                                 <a asp-controller="Transaction" asp-action="Index" class="nav-link">
-                                    <i class="nav-icon fas fa-clock"></i>
+                                    <i class="nav-icon fas fa-money-check-alt"></i>
                                     <p>
                                         Transactins
                                     </p>
