--- a/online_Hall_Booking/Views/HallFacilities/Create.cshtml
+++ b/online_Hall_Booking/Views/HallFacilities/Create.cshtml
@@ -8,37 +8,40 @@
 <div class="text-center">
     <h4 class="display-4">Create</h4>
 </div>
-<div class="card-body register-card-body" >
-   
+<div class="d-flex justify-content-center">
+    <div class="form-row">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label asp-for="Name" class="control-label"></label>
+                    <input asp-for="Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6">
+                    <label asp-for="createdAt" class="control-label">Date</label>
+                    <input asp-for="createdAt" class="form-control" />
+                    <span asp-validation-for="createdAt" class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6">
+                    <label asp-for="hallId" class="control-label"> Halls</label>
+                    <select asp-for="hallId" class="form-control" asp-items="ViewBag.hallId"></select>
+                </div>
             </div>
-            
-           
-            <div class="form-group">
-                <label asp-for="createdAt" class="control-label"></label>
-                <input asp-for="createdAt" class="form-control" />
-                <span asp-validation-for="createdAt" class="text-danger"></span>
-            </div>
-         
-            <div class="form-group">
-                <label asp-for="hallId"  class="control-label" > Halls</label>
-                <select asp-for="hallId" class ="form-control" asp-items="ViewBag.hallId"></select>
-               
-            </div>
-            
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+
+
+
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <input type="submit" value="Add Facilitiy" class="btn btn-primary" />
+                </div>
+                <div class="form-group col-md-6">
+                    <a asp-action="Index" class="btn btn-warning">Back to Facilities</a>
+                </div>
             </div>
         </form>
     </div>
-
-<div>
-    <a asp-action="Index"  class="btn btn-warning">Back to List</a>
 </div>
+
 
 
