--- a/online_Hall_Booking/Views/HallPackages/Create.cshtml
+++ b/online_Hall_Booking/Views/HallPackages/Create.cshtml
@@ -8,53 +8,69 @@
 <div class="text-center">
     <h4 class="display-4">Create</h4>
 </div>
-<div class="card-body register-card-body">
-    
+<div class="d-flex justify-content-center">
+    <div class="form-row">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label asp-for="Name" class="control-label"></label>
+                    <input asp-for="Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6">
+                    <label asp-for="createdAt" class="control-label">Date</label>
+                    <input asp-for="createdAt" class="form-control" />
+                    <span asp-validation-for="createdAt" class="text-danger"></span>
+                </div>
             </div>
+
+
+
             <div class="form-group">
                 <label asp-for="decription" class="control-label"></label>
                 <input asp-for="decription" class="form-control" />
                 <span asp-validation-for="decription" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="createdAt" class="control-label"></label>
-                <input asp-for="createdAt" class="form-control" />
-                <span asp-validation-for="createdAt" class="text-danger"></span>
+
             </div>
-          
-            <div class="form-group">
-                <label asp-for="personCount" class="control-label"></label>
-                <input asp-for="personCount" class="form-control" />
-                <span asp-validation-for="personCount" class="text-danger"></span>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label asp-for="personCount" class="control-label"></label>
+                    <input asp-for="personCount" class="form-control" />
+                    <span asp-validation-for="personCount" class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6">
+                    <label asp-for="charges" class="control-label"></label>
+                    <input asp-for="charges" class="form-control" />
+                    <span asp-validation-for="charges" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="charges" class="control-label"></label>
-                <input asp-for="charges" class="form-control" />
-                <span asp-validation-for="charges" class="text-danger"></span>
+
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label asp-for="type" class="control-label"></label>
+                    <input asp-for="type" class="form-control" />
+                    <span asp-validation-for="type" class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6">
+                    <label asp-for="hallId" class="control-label"></label>
+                    <select asp-for="hallId" class="form-control" asp-items="ViewBag.hallId"></select>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="type" class="control-label"></label>
-                <input asp-for="type" class="form-control" />
-                <span asp-validation-for="type" class="text-danger"></span>
-            </div>
-           
-            <div class="form-group">
-                <label asp-for="hallId" class="control-label"></label>
-                <select asp-for="hallId" class ="form-control" asp-items="ViewBag.hallId"></select>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <input type="submit" value="Add Package" class="btn btn-primary" />
+                </div>
+                <div class="form-group col-md-6">
+                    <a asp-action="Index" class="btn btn-warning">Back to Packages</a>
+                </div>
             </div>
         </form>
     </div>
-
-
-<div>
-    <a asp-action="Index"  class="btn btn-warning">Back to List</a>
 </div>
+
+
+  
