--- a/online_Hall_Booking/Views/HallTiming/Create.cshtml
+++ b/online_Hall_Booking/Views/HallTiming/Create.cshtml
@@ -6,36 +6,42 @@
 }
 
 <div class="text-center">
-    <h4 class="display-4">Create</h4>
+    <h4 class="display-4">Timing</h4>
 </div>
-<div class="card-body register-card-body">
+<div class="d-flex justify-content-center">
    
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+    <form asp-action="Create">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label asp-for="Name" class="control-label">Day</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group col-md-6">
                 <label asp-for="dateTime" class="control-label"></label>
                 <input asp-for="dateTime" class="form-control" />
                 <span asp-validation-for="dateTime" class="text-danger"></span>
             </div>
-           
-            <div class="form-group">
-                <label asp-for="hallId" class="control-label"></label>
-                <select asp-for="hallId" class ="form-control" asp-items="ViewBag.hallId"></select>
+        </div>
+
+       
+        <div class="form-group">
+            <label asp-for="hallId" class="control-label"></label>
+            <select asp-for="hallId" class="form-control" asp-items="ViewBag.hallId"></select>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <input type="submit" value="Add Time" class="btn btn-primary" />
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group col-md-6">
+                <a asp-action="Index" class="btn btn-warning">Back to Timings</a>
             </div>
-        </form>
+        </div>
+    </form>
     </div>
 
 
-<div>
-    <a asp-action="Index"  class="btn btn-warning">Back to List</a>
-</div>
+
 
 
