--- a/online_Hall_Booking/Views/HallTiming/Edit.cshtml
+++ b/online_Hall_Booking/Views/HallTiming/Edit.cshtml
@@ -5,54 +5,40 @@
     Layout = "~/Views/Shared/AdminLTE/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
+<div class="text-center">
+    <h4 class="display-4">Edit Timings</h4>
+</div>
+<div class="d-flex justify-content-center">
 
-<h4>HallTiming</h4>
-<hr />
-<div class="card-body register-card-body">
-   
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="htId" />
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+    <form asp-action="Create">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label asp-for="Name" class="control-label">Day</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group col-md-6">
                 <label asp-for="dateTime" class="control-label"></label>
                 <input asp-for="dateTime" class="form-control" />
                 <span asp-validation-for="dateTime" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="createdBy" class="control-label"></label>
-                <input asp-for="createdBy" class="form-control" />
-                <span asp-validation-for="createdBy" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="updatedBy" class="control-label"></label>
-                <input asp-for="updatedBy" class="form-control" />
-                <span asp-validation-for="updatedBy" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="status" class="control-label"></label>
-                <input asp-for="status" class="form-control" />
-                <span asp-validation-for="status" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="hallId" class="control-label"></label>
-                <select asp-for="hallId" class="form-control" asp-items="ViewBag.hallId"></select>
-                <span asp-validation-for="hallId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+        </div>
+
+
+        <div class="form-group">
+            <label asp-for="hallId" class="control-label"></label>
+            <select asp-for="hallId" class="form-control" asp-items="ViewBag.hallId"></select>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
-        </form>
-    </div>
-
-
-<div>
-    <a asp-action="Index"  class="btn btn-warning">Back to List</a>
+            <div class="form-group col-md-6">
+                <a asp-action="Index" class="btn btn-warning">Back to Timings</a>
+            </div>
+        </div>
+    </form>
 </div>
 
 
