--- a/online_Hall_Booking/Views/Hall/Edit.cshtml
+++ b/online_Hall_Booking/Views/Hall/Edit.cshtml
@@ -13,9 +13,10 @@
     <hr />
     <div class="d-flex justify-content-center">
         <div class="form-row">
-            <form enctype="multipart/form-data" asp-action="Create" class="align-content-center">
+            <form enctype="multipart/form-data" asp-action="Edit" class="align-content-center">
                 >
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="hId" />
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label asp-for="Name" class="control-label"></label>
@@ -47,10 +48,10 @@
 
 
                 @*<div class="form-group">
-                        <label asp-for="cId" class="control-label"></label>
-                        <input asp-for="cId" class="form-control" />
-                        <span asp-validation-for="cId" class="text-danger"></span>
-                    </div>*@
+            <label asp-for="cId" class="control-label"></label>
+            <input asp-for="cId" class="form-control" />
+            <span asp-validation-for="cId" class="text-danger"></span>
+        </div>*@
                 <div class="form-group">
                     <label asp-for="CId" class="control-label"> Halls</label>
                     <select asp-for="CId" class="form-control" asp-items="ViewBag.CId"></select>
