--- a/online_Hall_Booking/Views/HallPackages/Edit.cshtml
+++ b/online_Hall_Booking/Views/HallPackages/Edit.cshtml
@@ -12,9 +12,9 @@
 </div>
 <div class="d-flex justify-content-center">
     <div class="form-row">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
+            <input type="hidden" asp-for="pId" />
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label asp-for="Name" class="control-label"></label>
@@ -66,7 +66,7 @@
                 <div class="form-group col-md-6">
                     <input type="submit" value="Save" class="btn btn-primary" />
                 </div>
-               
+
             </div>
         </form>
     </div>
