--- a/online_Hall_Booking/Views/HallTiming/Edit.cshtml
+++ b/online_Hall_Booking/Views/HallTiming/Edit.cshtml
@@ -10,8 +10,9 @@
 </div>
 <div class="d-flex justify-content-center">
 
-    <form asp-action="Create">
+    <form asp-action="Edit">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <input type="hidden" asp-for="htId" />
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label asp-for="Name" class="control-label">Day</label>
