--- a/online_Hall_Booking/Views/Product/Details.cshtml
+++ b/online_Hall_Booking/Views/Product/Details.cshtml
@@ -128,7 +128,7 @@
     </section>
 
     <section class="text-center">
-        <h4><strong>Related Products</strong></h4>
+        <h4><strong>related products</strong></h4>
         <hr />
 
         <div class="card-group  " style="margin-bottom:40px; margin-left:20px; ">
@@ -136,8 +136,8 @@
 
             @foreach (var item in Model.halllist)
             {
-                <div class="col-4">
-                    <div class="card " style="max-width: 18rem;">
+                <div class="col-3">
+                    <div class="card h-100" style="max-width: 18rem;">
                         <img class="card-img-top   " src="~/hall/cover/@item.CoverImageUrl" style="height:300px" alt="Card image cap">
 
                         <div class="card-body">
