--- a/online_Hall_Booking/Views/Product/Index.cshtml
+++ b/online_Hall_Booking/Views/Product/Index.cshtml
@@ -5,6 +5,35 @@
     Layout = "~/Views/Shared/CustomerLTE/_Layout_Customer.cshtml";
 }
 
+
+    <div id="carouselExampleControls" style="margin-left:40px; margin-right:40px; margin-bottom :100px" class="carousel slide" data-ride="carousel">
+
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+
+               
+                <img class="d-block w-100" src="~/hall/cover/e3047c7a-359b-4641-9faa-69aba5b8c2a2_cover6.jpg" style="height:500px"  alt="First slide">
+            </div>
+            <div class="carousel-item">
+               
+                <img class="d-block w-100" src="~/hall/Logo/d22fbe28-b974-492c-90e6-ae3be94c95c7_cover1.jpg"   style="height:500px" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="~/hall/cover/6d73af38-5ebb-4a80-8504-7fc4fa8851f1_cover3.jpg"  style="height:500px"  alt="Third slide">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+
+
+
 <div class="card-group  " style="margin-bottom:40px; margin-left:20px; ">
 
     
