--- a/online_Hall_Booking/Views/Product/Index.cshtml
+++ b/online_Hall_Booking/Views/Product/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 
-    <div id="carouselExampleControls" style="margin-left:40px; margin-right:40px; margin-bottom :100px" class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleControls" style="margin-left:40px; margin-right:40px; margin-bottom :100px; margin-top:40px" class="carousel slide" data-ride="carousel">
 
         <div class="carousel-inner">
             <div class="carousel-item active">
