--- a/online_Hall_Booking/Views/Shared/CustomerLTE/_Layout_Customer.cshtml
+++ b/online_Hall_Booking/Views/Shared/CustomerLTE/_Layout_Customer.cshtml
@@ -15,45 +15,67 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 </head>
 <body>
-    <div style="margin-bottom:40px">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            @*<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand" href="#">Navbar</a>*@
+    
+        <nav class="navbar navbar-expand-md navbar-light bg-dark " >
 
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <li class="nav-item active">
-                        <a class="nav-link" asp-action="Index" asp-controller="Product">Home <span class="sr-only">(current)</span></a>
+            <a class="navbar-brand"><img src="img/dish.png"></a>
+
+            <button type="button" class="navbar-toggler bg-light" data-toggle="collapse" data-target="#nav">
+
+                <span class="navbar-toggler-icon"></span>
+
+            </button>
+
+            <div class="collapse navbar-collapse justify-content-between" id="nav">
+
+                <ul class="navbar-nav">
+
+                    <li class="nav-item">
+
+                        <a class="nav-link text-light font-weight-bold px-3" asp-action="Index" asp-controller="Product">HOME</a>
+
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" asp-action="ContactUs" asp-controller="Home">ContactUs <span class="sr-only">(current)</span></a>
+
+
+
+                    <li class="nav-item">
+
+                        <a class="nav-link text-light font-weight-bold px-3" asp-action="Aboutus" asp-controller="Home">ABOUT US</a>
+
                     </li>
-          
+
+                    <li class="nav-item">
+
+                        <a class="nav-link text-light font-weight-bold px-3" asp-action="ContactUs" asp-controller="Home">CONTACT</a>
+
+                    </li>
+                    
                 </ul>
+
+
+                <!-- Search bar -->
+
                 <form class="form-inline my-2 my-lg-0" asp-action="Search" asp-controller="Product" method="get">
                     <input class="form-control mr-sm-2" type="search" name="SearchString" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></button>
                 </form>
+                <ul class="navbar-nav ">
+                    <li class="nav-item ">
 
-                <ul class="">
-                    <li class="nav-item active ">
-                        <a asp-area="Identity" asp-page="/Account/Register" class="nav-link text-white" style="margin-top:10px">Register</a>
+                        <a class="nav-link text-light font-weight-bold px-3" asp-area="Identity" asp-page="/Account/Login"><i class="fa fa-sign-in"></i> Login</a>
+
                     </li>
 
-                </ul>
+                    <li class="nav-item">
 
-                <ul class="">
-                    <li class="nav-item active ">
-                        <a asp-area="Identity" asp-page="/Account/Login" class="nav-link text-white" style="margin-top:10px">Login</a>
+                        <a class="nav-link text-light font-weight-bold px-3" asp-area="Identity" asp-page="/Account/Register"><i class="fa fa-user-plus"></i> SignUp</a>
+
                     </li>
-
                 </ul>
-               
             </div>
+
         </nav>
-    </div>
+    
 
 
     <div>
