--- a/online_Hall_Booking/Views/Product/Index.cshtml
+++ b/online_Hall_Booking/Views/Product/Index.cshtml
@@ -38,13 +38,13 @@
 
 
 
-<div class="card-group  " style="margin-bottom:40px; margin-left:20px; ">
+<div class="card-group  " style="margin-bottom:40px; margin-left:20px;  ">
 
 
     @foreach (var item in Model)
     {
-        <div class="col-3">
-            <div class="card h-100 text-white bg-dark mb-3" style="max-width: 18rem;">
+        <div class="col-3" style="margin-bottom: 50px;">
+            <div class="card h-100 text-white bg-dark mb-3" style="max-width: 18rem; ">
                 <img class="card-img-top   " src="~/hall/cover/@item.CoverImageUrl" style="height:300px" alt="Card image cap">
 
                 <div class="card-body">
