--- a/online_Hall_Booking/Views/Shared/CustomerLTE/_Layout_Customer.cshtml
+++ b/online_Hall_Booking/Views/Shared/CustomerLTE/_Layout_Customer.cshtml
@@ -17,8 +17,9 @@
 <body>
 
     <nav class="navbar navbar-expand-md navbar-light bg-dark ">
-
-        <a class="navbar-brand"><img src="img/dish.png"></a>
+       
+        
+        <a class="navbar-brand"><img src="~/banner/SMCS (1).png" alt="logo" style="height:50px;"></a>
 
         <button type="button" class="navbar-toggler bg-light" data-toggle="collapse" data-target="#nav">
 
