--- a/online_Hall_Booking/Views/Product/Create.cshtml
+++ b/online_Hall_Booking/Views/Product/Create.cshtml
@@ -6,8 +6,10 @@
 }
 
 
+<div class="text-center">
+    <h4>Booking Request</h4>
+</div>
 
-<h4>HallAppointment</h4>
 <hr />
 <div class="d-flex justify-content-center">
     <div class="form-row">
