--- a/online_Hall_Booking/Views/Shared/AdminLTE/_MainNavigation.cshtml
+++ b/online_Hall_Booking/Views/Shared/AdminLTE/_MainNavigation.cshtml
@@ -13,7 +13,7 @@
             <a href="~/Home" class="brand-link">
                 <img src="~/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
                      style="opacity: .8">
-                <span class="brand-text font-weight-light">AdminLTE 3</span>
+                <span class="brand-text font-weight-light">SMCS</span>
             </a>
             <div class="sidebar">
                 @if (User.Identity.IsAuthenticated)
@@ -47,14 +47,7 @@
                         </li>
                         @if (User.Identity.IsAuthenticated)
                         {
-                            <li class="nav-item ">
-                                <a asp-controller="Home" asp-action="Privacy" class="nav-link">
-                                    <i class="nav-icon fas fa-lock"></i>
-                                    <p>
-                                        Privacy
-                                    </p>
-                                </a>
-                            </li>
+                           
 
                             <li class="nav-item ">
                                 <a asp-controller="Hall" asp-action="Index" class="nav-link">
